fix index on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -441,12 +441,12 @@ img, video {
         width: 100%;
         z-index: 1000;
         background-color: var(--background-color);
-        bottom: 100vh;
+        top: -100vh;
         transition: 0.4s ease;
     }
 
     .index-wrapper_active {
-        bottom: 0vh;
+        top: 0;
     }
 
     /*HEADER*/
